fix[exporter]: build pipeline error